--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,9 @@ deploy:
 #   # Set in the settings page of your repository, as a secure variable
 #   github_token: $GITHUB_TOKEN
 #   keep_history: true
+#   local_dir: "docs/_build/html/"
 #   on:
-#     branch: github_page
+#     branch: master
 
 script:
   - pip install flake8
